Closed Bug 1795906 Opened 2 years ago Closed 2 years ago

Unified build failure

Categories

(Core :: DOM: Service Workers, defect, P3)

defect

Tracking

()

RESOLVED FIXED
108 Branch
Tracking Status
firefox108 --- fixed

People

(Reporter: fabrice, Assigned: saschanaz)

Details

Attachments

(1 file)

On some build machines I see unified build failures due to a missing include:

08:09:07  0:23.57 In file included from UnifiedBindings21.cpp:2:
08:09:07  0:23.57 /home/kaios-ci/Docker/kai/master/objdir-gecko/dom/bindings/PushSubscriptionOptionsBinding.cpp:214:10: error: use of undeclared identifier 'ServiceWorkerVisible'
08:09:07  0:23.57   return ServiceWorkerVisible(aCx, aObj);

Happy to test a fix if someone knows where to include ServiceWorker.h

Severity: -- → N/A
Flags: needinfo?(krosylight)
Priority: -- → P3

Oh, this is a bit tricky as PushSubscriptionOptions does not directly include ServiceWorker and thus does not include ServiceWorker.h.

Can you try including bool ServiceWorkerVisible(JSContext* aCx, JSObject* aGlobal); to PushSubscriptionOptions.h and see if it works?

Flags: needinfo?(krosylight) → needinfo?(fabrice)

(In reply to Kagami :saschanaz from comment #2)

Oh, this is a bit tricky as PushSubscriptionOptions does not directly include ServiceWorker and thus does not include ServiceWorker.h.

Can you try including bool ServiceWorkerVisible(JSContext* aCx, JSObject* aGlobal); to PushSubscriptionOptions.h and see if it works?

Hi, yes I can confirm that this fix works.

Flags: needinfo?(fabrice)
Severity: N/A → S3
Assignee: nobody → krosylight
Status: NEW → ASSIGNED
Pushed by krosylight@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/c45d68ec4862
Fix unified build failure from PushSubscriptionOptions r=fabrice
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 108 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: