Bug 1795906 - Fix unified build failure from PushSubscriptionOptions r=fabrice

Differential Revision: https://phabricator.services.mozilla.com/D161603